--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,12 @@ apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'signing'
 
-
+ext {
+    SPRING_VERSION = '5.0.6.RELEASE'
+    MOCKITO_VERSION = '2.18.3'
+    JUNIT_VERSION = '4.12'
+    HAMCREST_VERSION = '1.3'
+}
 group = 'com.marcnuri'
 version = '0.0.0-SNAPSHOT'
 sourceCompatibility = 1.8
