--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,15 @@ artifacts {
 signing {
     sign configurations.archives
 }
+def resolvedOssrhUsername=''
+def resolvedOssrhPassword=''
 
+if (project.hasProperty("ossrhUsername")) {
+    resolvedOssrhUsername = ossrhUsername
+}
+if (project.hasProperty("ossrhPassword")) {
+    resolvedOssrhPassword = ossrhPassword
+}
 uploadArchives {
     repositories {
         mavenDeployer {
@@ -56,14 +64,14 @@ uploadArchives {
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
                 authentication(
-                        userName: ossrhUsername,
-                        password: ossrhPassword)
+                        userName: resolvedOssrhUsername,
+                        password: resolvedOssrhPassword)
             }
 
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
                 authentication(
-                        userName: ossrhUsername,
-                        password: ossrhPassword)
+                        userName: resolvedOssrhUsername,
+                        password: resolvedOssrhPassword)
             }
 
             pom.project {
