--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,12 @@ dependencies {
     compileOnly group: 'org.springframework', name: 'spring-beans', version: SPRING_VERSION
     compileOnly group: 'org.springframework', name: 'spring-context', version: SPRING_VERSION
     compileOnly group:  'org.mockito', name: 'mockito-core', version: MOCKITO_VERSION
-    testCompileOnly group: 'org.springframework', name: 'spring-beans', version: SPRING_VERSION
-    testCompileOnly group: 'org.springframework', name: 'spring-context', version: SPRING_VERSION
-    testCompileOnly group:  'org.mockito', name: 'mockito-core', version: MOCKITO_VERSION
-    testCompileOnly group: 'junit', name: 'junit', version: JUNIT_VERSION
-    testCompileOnly group: 'org.hamcrest', name: 'hamcrest-all', version: HAMCREST_VERSION
-    testCompileOnly group: 'org.springframework', name: 'spring-test', version: SPRING_VERSION
+    testCompile group: 'org.springframework', name: 'spring-beans', version: SPRING_VERSION
+    testCompile group: 'org.springframework', name: 'spring-context', version: SPRING_VERSION
+    testCompile group:  'org.mockito', name: 'mockito-core', version: MOCKITO_VERSION
+    testCompile group: 'junit', name: 'junit', version: JUNIT_VERSION
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: HAMCREST_VERSION
+    testCompile group: 'org.springframework', name: 'spring-test', version: SPRING_VERSION
 
 }
 
