--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 group = 'com.marcnuri'
-version = '0.0.0-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = 1.8
 description = "Common Spring Framework testing utilities"
 
