--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,17 @@ buildscript {
     repositories {
         mavenCentral()
     }
+    dependencies {
+        classpath group: 'org.kt3k.gradle.plugin', name: 'coveralls-gradle-plugin', version: GRADLE_COVERALLS_VERSION
+    }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'jacoco'
+apply plugin: 'com.github.kt3k.coveralls'
 
 group = 'com.marcnuri'
 version = '0.0.0-SNAPSHOT'
@@ -101,5 +106,12 @@ uploadArchives {
                 }
             }
         }
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
     }
 }
