--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
 
 group = 'com.marcnuri'
-version = '0.0.2'
+version = '0.0.0-SNAPSHOT'
 sourceCompatibility = 1.8
 description = "Common Spring Framework testing utilities"
 
